# law

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  summary.md
plans/: 001-rotate-leaked-api-key.md  002-remove-law-db-from-git.md  003-clean-dead-embedding-code.md  004-fix-db-connection-leaks.md  005-add-pagination-to-all-opinions.md  006-disable-reload-in-production.md  007-add-test-suite-baseline.md  008-remove-duplicate-requirements-txt.md  009-fix-docker-port-mismatch.md  010-add-chat-persistence.md  011-add-favicon.md  012-document-opinions-csv.md  README.md
templates/: base.html  chat.html  index.html  search.html
tests/: conftest.py  test_app.py  test_database.py
