[project]
name = "law"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "numpy>=2.0.0",
    "openai>=2.43.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
]
